Fix: Right menu overflow
When the right menu was closed, the close button was still showing

--- a/packages/wipapp/src/components/RightSideMenu/RightSideMenu.css
+++ b/packages/wipapp/src/components/RightSideMenu/RightSideMenu.css
@@ -3,6 +3,7 @@
   flex-direction: column;
   box-shadow: -3px 0px 10px -5px rgba(0, 0, 0, 0.5);
   z-index: 1;
+  overflow: hidden;
 }
 
 .right-side-menu-title {
